--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Numble</h1>
     <h2>i'm thinking of a number between 1 and 100</h2>
     <div class="form">
-        <input type="text" id="guessField" class="guessField">
+        <input type="number" id="guessField" class="guessField">
         <input type="submit" value="check" class="guessSubmit" id="submitguess">
     </div>
     <p id=message>
